# paladin_engine

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  demo.md  package.json  pal.py  paladin_engine20.pstat  paladin_engine23.pstat  paladin_engine6.pstat  pyproject.toml  run_experiment.sh  run_paladin.sh  run_paladin_docker.sh  run_tutorial.sh  source_provider.py  validator3_loop_summary_25.pstat
.github/workflows/: test_flow.yml
DiffTool/: caterpillar_sdn_sn.ipynb  caterpillar_super_naive.csv  diff_tool.ipynb  diff_tool_input.json  diff_tool_input_caterpillar.json  diff_tool_input_is_prime.json  diff_tool_input_majority_element.json  is_prime.ipynb  is_prime_naive.csv  is_prime_square.csv  paladin_diff_tool.py  test_is_prime_naive.csv  test_is_prime_square.csv
DiffTool/.ipynb_checkpoints/: diff_tool-checkpoint.ipynb
DiffTool/caterpillar/: caterpillar_caterp.csv  caterpillar_naive.csv  caterpillar_naive_caterp.ipynb  caterpillar_sdn_sn.ipynb  caterpillar_super_duper_naive.csv
DiffTool/is_prime/: is_prime.ipynb  is_prime_naive.csv  is_prime_square.csv
DiffTool/majority_element/: majority_element.ipynb  majority_element_1.csv  majority_element_2.csv
DiffTool/move_zeros/: move_zeros.ipynb  move_zeros_1.csv  move_zeros_2.csv
PaladinCLI/: paladin_cli.py  test.csv  test_module_output.py
PaladinCLI/interactive_graph/: .gitignore  interactive_graph.py  package-lock.json  package.json  paladin_debug_server.py
PaladinEngine/: .pdbrc  engine.py  finders.py  interactive_debugger.py  pretty_printer.py  scratch.py  stubbers.py  stubs.py
TemporalParser/: parser.py
demo/: demo.csv  demo.json  demo.py  demo_output.py
docs/: acmart.cls  chat_gpt_architecture_output.md  main.tex  movie_transcript.md  xstring-en.tex
interactive_graph/: index.html  interactive_graph.py
(+364 files in other folders)
