[tool.poetry]
name = "paladin-engine"
version = "0.0.1"
description = ""
authors = ["Oren Afek"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Werkzeug = "2.1.2"
flask = "2.1.2"
flask-restx = "0.5.1"
Flask-Cors = "^3.0.10"
pandas = "^1.4.4"
pyparsing = "^3.0.9"
more-itertools = "^8.14.0"
rangedict = "^0.1.7"
python-ranges = "^1.2.2"
PyHamcrest = "^2.0.4"
frozendict = "^2.3.5"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
