[tool.poetry]
name = "paladin-engine"
version = "0.0.1"
description = ""
authors = ["Oren Afek"]
license = "MIT"
readme = "README.md"
#packages = [{include = "paladin_engine"}]

[tool.poetry.dependencies]
python = "^3.10"
Werkzeug = "2.1.2"
flask = "2.1.2"
flask-restx = "0.5.1"
Flask-Cors = "^3.0.10"
pandas = "^2.2.2"
pyparsing = "^3.0.9"
more-itertools = "^8.14.0"
Flask-Classful = "^0.14.2"
pytest = "^7.3.0"
frozendict = "^2.3.8"
openpyxl = "^3.1.2"
crcmod = "^1.7"
intervaltree = "^3.1.0"
sortedcontainers = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
